--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <app-nav-bar></app-nav-bar>
+<div class="btn-group btn-group-toggle">
+    <label class="btn-primary" ngbButtonLabel>Button
+    </label>
+    </div>
 <app-calendar></app-calendar>
 
 
